# imgui_app_fw.cpmpckg

./: CMakeLists.txt  README.md
cmake/: add_cpm_module.cmake
examples/: addon_main.cpp  app_main.cpp  main.cpp
include/: imgui_app.h  imgui_app_fw.h  imgui_app_fw_rendering.h  imgui_app_model.h
modules/: imgui_app_fw.cmake
modules/imgui_app_fw/: CMakeLists.txt
src/: imgui_app.cpp  imgui_app_fw.cpp  imgui_app_fw_impl.h  imgui_app_internal.h  imgui_app_logger.cpp  imgui_app_logger.h
src/glfw_vulkan/: VulkanDevice2.cpp  main.cpp
src/win32_dx11/: main.cpp
src/win32_dx12/: imgui_impl_dx12.cpp  imgui_impl_dx12.h  main.cpp
